Update README with JAR execution instructions
Added note on running the JAR file via terminal if double-click fails.